# Menli

./: .clang-format  .clang_format  .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
include/: graph.hpp  neurons.hpp  synapses.hpp
sources/: graph.cpp  graph.hpp  main.cpp  neurons.cpp  neurons.hpp  symbolic.cpp  synapses.cpp  synapses.hpp
src/: CMakeLists.txt  functions.cpp  functions.h  graph.cpp  main.cpp  neuron.cpp  neuron.h  synapses.cpp
src/include/: graph.hpp  graph_impl.hpp  integrate.hpp  neurons.hpp
src/numerical/: CMakeLists.txt
src/numerical/include/: equation.hpp  integrate.hpp
src/numerical/sources/: equation.cpp  integrate.cpp
src/snn/: CMakeLists.txt
src/snn/include/: neurons.hpp
src/snn/sources/: neurons.cpp
src/sources/: graph.cpp  neurons.cpp
